--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">HungerRelief</string>
     <string name="enter_food_name">Enter Food Name</string>
@@ -8,6 +9,10 @@
     <string name="enter_email">Enter Email</string>
     <string name="enter_password">Enter Password</string>
     <string name="login">Login</string>
-    <string name="enter_food_namee">Enter Food Name</string>
-    <string name="enter_expiry_datee">Enter Expiry Date</string>
+    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
+    <string name="already_have_an_account_login">Already have an account? Login</string>
+    <string name="email_hint">Email</string>
+    <string name="password_hint">Password</string>
+    <string name="login_text">Login</string>
+    <string name="signup_text">Don&apos;t have an account? Sign Up</string>
 </resources>
